hphp/hack/test/typecheck/like_types/dynamic_coercion/decl_types/tany.php.exp
File "tany.php", line 6, characters 10-10:
Was expecting a return type hint (Typing[4030])
