hphp/hack/test/typecheck/like_types/dynamic_coercion/decl_types/tany.php
<?hh
// Copyright 2004-present Facebook. All Rights Reserved.

function dyn(): dynamic { return 4; }

function f() /* : TAny */{
  return dyn(); // ok
}
